# shaltaiboltai

./: Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
examples/: cli_probe.rs  smoke.rs
src/: app.rs  config.rs  images.rs  lib.rs  main.rs  markdown.rs  session.rs  theme.rs  tools.rs  ui.rs
src/providers/: anthropic.rs  cli_agent.rs  mod.rs  ollama.rs  openai.rs  sse.rs
tests/: persistence.rs  render.rs  state_machine.rs
