[package]
name = "shaltaiboltai"
version = "0.1.0"
edition = "2021"
description = "Multi-provider agentic coding TUI (Anthropic, OpenAI, Ollama)"
license = "MIT"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "process", "time", "fs"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
anyhow = "1"
toml = "0.8"
dirs = "5"
textwrap = "0.16"

[profile.release]
lto = true
strip = true
